# SkillBox

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  input.css  package-lock.json  package.json  tailwind.config.js
assets/: main.css  tailwind.css
icons/: SkillBox.icns
src/: app.rs  main.rs  routes.rs  theme.rs
src/components/: badge.rs  confirm_dialog.rs  dashboard.rs  empty_state.rs  icons.rs  layout.rs  marketplace.rs  marketplace_drawer.rs  mod.rs  search_bar.rs  sidebar.rs  skill_card.rs  skill_detail.rs  skill_drawer.rs  skill_form.rs  skill_grid.rs  toast.rs  upload_dialog.rs
src/hooks/: mod.rs  use_skills.rs
src/models/: frontmatter.rs  mod.rs  skill.rs
src/services/: markdown.rs  marketplace.rs  mod.rs  scanner.rs  skill_io.rs
