[package]
name = "manage-skills"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["desktop", "router"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dirs = "6"
pulldown-cmark = "0.12"
bytesize = "2"
chrono = "0.4"
trash = "5"
zip = "2"
rfd = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
notify = "7"
ammonia = "4"
dunce = "1"

[build-dependencies]
winresource = "0.1"
